force-app/main/default/objects/Life_Insurence__c/Life_Insurence__c.object-meta.xml
<CustomObject>
    <label>Life Insurence</label>
    <nameField>
        <displayFormat>LIID-{0000}</displayFormat>
        <label>PolicyId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Life Insurences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>