force-app/main/default/objects/Life_Insurence__c/fields/agent_ID__c.field-meta.xml
<CustomField>
    <fullName>agent_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>agent ID</label>
    <referenceTo>agent__c</referenceTo>
    <relationshipLabel>Life Insurences</relationshipLabel>
    <relationshipName>Life_Insurences</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>