force-app/main/default/objects/Life_Insurence__c/fields/No_Of_Terms__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Terms__c</fullName>
    <label>No.Of Terms</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>