force-app/main/default/objects/Life_Insurence__c/fields/Premium_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Premium_End_Date__c</fullName>
    <label>Premium End Date</label>
    <type>Date</type>
</CustomField>