force-app/main/default/objects/Life_Insurence__c/fields/PremiumAmount__c.field-meta.xml
<CustomField>
    <fullName>PremiumAmount__c</fullName>
    <label>PremiumAmount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>